--- a/style.css
+++ b/style.css
@@ -1,57 +1,162 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+  
 body{
     margin: 0;
     padding: 0;
     width: 100%;
     font-size: 14px;
-    font-family: "Outfit", sans-serif;
-    color: hsl(218, 44%, 22%);
+    font-family: "Overpass", sans-serif;
+    color: hsl(0, 0%, 100%);
     overflow-x: hidden;
     overflow-y: hidden;
 }
 
 .container{
-    background-color:hsl(212, 45%, 89%);
-    min-height: 100vh;
+    background-color: hsl(216, 12%, 8%);
     display: flex;
-    justify-content: center;
     align-items: center;
-
+    justify-content: center;
+    min-height: 100vh;
 }
 
-.qr_container{
+.container__ratings,
+.thanku_container{
+    display: flex;
+    width: 400px;
+    height: 400px;
+    background-color:  hsl(213, 19%, 18%);
+    flex-direction: column;
+    border-radius: 30px;
+}
+
+.container_starimage{
+    display: flex;
+    border-radius: 50%;
+    background:  hsl(217, 12%, 63%);
+    padding: 0.8rem;
+    width: 20px;
+    height: 20px;
+    margin:2em;
+}
+
+.container_starimage   img{
+    width: inherit;       
+}
+
+.container_rating_desc{
+    margin: 0 2em;
+}
+
+.container_rating_desc h1,
+.heading{
+    font-weight: 700;
+    font-size: 1.6rem;
+}
+
+.container_rating_desc p,
+.paragraph{
+    font-weight: 400;
+    font-size: 0.9rem;
+    color: hsl(217, 12%, 63%);
+    line-height: 1.5;
+    margin-top: 0;
+}
+
+.numbers{
+    display: flex;
+    justify-content: space-around;
+    font-weight: bold;
+    margin: 0 1em 0 1em;
+}
+
+
+.circle {
+    background-color: hsl(216, 12%, 54%);
+    border-radius: 50%;
+    padding: 1.2em 1.6em;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .circle:hover {
+    background-color:  hsl(217, 12%, 63%);
+    color: hsl(0, 0%, 100%);
+  }
+  
+  .circle:active {
+    background-color: hsl(25, 97%, 53%);
+    color: hsl(0, 0%, 100%);
+  }
+  
+  .selected {
+    background-color:hsl(217, 12%, 63%);
+    color:hsl(0, 0%, 100%);
+  }
+
+.submit_button{
+    background-color: hsl(25, 97%, 53%);
+    color: hsl(0, 0%, 100%);
+    outline: none;
+    border: none;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    padding: 1em;
+    border-radius: 2em;
+    display: block;
+    margin: 2.5em;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
+.submit_button:active {
     background-color: hsl(0, 0%, 100%);
-    width: 300px;
-    border-radius: 20px;
+    color:  hsl(25, 97%, 53%);
+  }
+  
+.submit_button:hover {
+    cursor: pointer;
+  }
+
+.thanku_container {
+    display: none;
+}
+
+.thanku_container img{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-self: center;
+    margin: 3em;
 }
 
-.qr_container .qr_code{
+.selected_rating_div{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 90%;
-    border-radius: 10px;
-    margin: 15px;
+}
+.rating{
+    background-color: hsl(216, 12%, 54%);
+    color: hsl(25, 97%, 53%);
+    border-radius: 1em;
+    padding: 0.4em 1.3em;
 }
 
-.heading{
+.thanku_container .heading,
+.thanku_container .paragraph{
     text-align: center;
-    padding: 0 12px 12px 12px;
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 1.3;
-    margin-bottom: 0;
 }
 
-.paragraph{
-    text-align: center;
-    padding: 0 20px 15px 20px;
-    color: hsl(220, 15%, 55%);
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 1.3;
-    margin-top: 0;
+.thanku_container .paragraph{
+    margin:0 2.5em;
+}
+  
+input[type="radio"]{
+    display: none;
+  }
+
+@media only screen and (max-width:767px){
+    .container{
+        padding: 2em;
+    }
 }
