--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap');
-
 :root{
-    --light_cyan: hsl(193, 38%, 86%);
-    --neon_green: hsl(150, 100%, 66%);
-    --grayish_blue: hsl(217, 19%, 38%);
-    --dark_grayish_blue: hsl(217, 19%, 24%);
-    --dark_blue: hsl(218, 23%, 16%);
+    --Very_Dark_Gray: hsl(0, 0%, 17%);
+    --Dark_Gray: hsl(0, 0%, 59%)
 }
 
 *{
@@ -15,87 +10,154 @@
 body{
     margin: 0;
     padding: 0;
-    width: 100%;
-    font-size: 14px;
-    font-family: "Manrope", sans-serif;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    font-family: 'Rubik', sans-serif;
+    color: #fff;
 }
 
 main{
     display: flex;
-    justify-content: center;
     align-items: center;
-    background-color: var(--dark_blue);
+    flex-direction: column;   
     min-height: 100vh;
-}
-
-section{
-    background-color: var(--dark_grayish_blue);
     text-align: center;
-    border-radius: 15px;
-    padding: 2em;
-    width: 550px;
-    height: 315px;
 }
 
-p{
-    color: var(--neon_green);
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    font-weight: 800;
-    font-size: 12px;
+section.search_heading{
+    background-image: url('./images/pattern-bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 17em;
+}   
+
+section.search_heading h1{
+    font-size: 2rem;
+    font-weight: 500;
 }
 
-h2{
-    color: var(--light_cyan);
-    font-size: 28px;
-    font-weight: 800;
-    height: 45%;
+form{
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    margin-bottom: 5em;
 }
 
-.divider{
-    position: relative;
-    top: 2em;
-}
-
-button{
-    background-color: var(--neon_green);
+.ip_search{
+    height: 50px;
+    width: 30em;
+    border-radius:10px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
     border: none;
-    border-radius: 50%;
-    width: 65px;
-    height: 65px;
-    top: 15%;
-    position: relative;
+    font-size: 18px;
+    padding-left: 1em;
+}
+
+.ip_search_button{
+    height: 50px;
+    width: 5em;
+    border-radius:10px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border: none;
+    background: var(--Very_Dark_Gray);
     cursor: pointer;
 }
 
-button:hover,
-button:active{
-    box-shadow: 0px 0px 15px 5px hsl(150deg 100% 66%);
+ul{
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    min-height: 60%;
+    background-color:#fff;
+    width: 80%;
+    flex-direction: row;
+    margin: auto;
+    padding: 0em 2em;
+    text-align: start;
+    z-index: 99999999;
+    position: relative; 
+}
+
+ul>li{
+    height: 5em;
+    width: 24%;
+}
+
+ul>li>h3{
+    color:  var(--Dark_Gray);
+    margin-top: 0;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+section ul>li>h1{
+   color:  var(--Very_Dark_Gray);
+   margin: 0;
+   font-size:30px !important;
+   font-weight: 500 !important ;
 }
 
 
-@media only screen and (max-width:767px){
-    section{
-        width: 365px;
-        height: 390px;
-        padding: 1.5em;
-        display: flex;
-        flex-direction: column;
-    }
 
-    h2{
-        height: 55%;
-    }
-
-    button{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        align-self: center;
-        width: 60px;
-        height: 60px;
-    }
-
+li{
+    padding-right: 1em;
+    padding-left: 1em;
+    border-right: 1px solid var(--Dark_Gray);
 }
+
+li:last-of-type{
+    border-right: none;
+}
+
+.map-container{
+    width: 100%;
+    height: 83em;
+  }
+
+
+
+
+
+
+
+
+
+input:active,
+input:focus,
+input:hover{
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+
+::-webkit-input-placeholder{
+        color: var(--Dark_Gray);
+        font-size: 18px;
+        padding-left: 1.5em;
+}
+
+:-ms-input-placeholder{
+        color: var(--Dark_Gray);
+        font-size: 18px;
+        padding-left: 1.5em;
+}
+
+::placeholder { 
+    color: var(--Dark_Gray);
+    font-size: 18px;
+    padding-left: 1.5em;
+  }
+
+  /* clears the ‘X’ from Internet Explorer */
+input[type=search]::-ms-clear { display: none; width : 0; height: 0; }
+input[type=search]::-ms-reveal { display: none; width : 0; height: 0; }
+/* clears the ‘X’ from Chrome */
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; }
+  
