--- a/style.css
+++ b/style.css
@@ -118,8 +118,65 @@ li:last-of-type{
   }
 
 
+  ::-webkit-input-placeholder{
+    color: var(--Dark_Gray);
+    font-size: 18px;
+    padding-left: 1.5em;
+}
+
+:-ms-input-placeholder{
+    color: var(--Dark_Gray);
+    font-size: 18px;
+    padding-left: 1.5em;
+}
+
+::placeholder { 
+color: var(--Dark_Gray);
+font-size: 18px;
+padding-left: 1.5em;
+}
 
 
+@media only screen and (max-width:767px){
+    .ip_search{
+        width: 15em;
+        padding-left: 0.5em;
+    }
+
+    ul{
+        flex-direction: column;
+        padding: 2em 2em;
+    }
+
+    ul>li{
+        border-right: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    section ul>li>h1{
+        font-size: 22px !important;
+    }
+
+    ::-webkit-input-placeholder{
+        color: var(--Dark_Gray);
+        font-size: 15px;
+        padding-left: .2em;
+    }
+
+    :-ms-input-placeholder{
+            color: var(--Dark_Gray);
+            font-size: 15px;
+            padding-left: .2em;
+    }
+
+    ::placeholder { 
+        color: var(--Dark_Gray);
+        font-size: 15px;
+        padding-left: .2em;
+    }
+
+}
 
 
 
@@ -133,24 +190,6 @@ input:hover{
     cursor: pointer;
 }
 
-
-::-webkit-input-placeholder{
-        color: var(--Dark_Gray);
-        font-size: 18px;
-        padding-left: 1.5em;
-}
-
-:-ms-input-placeholder{
-        color: var(--Dark_Gray);
-        font-size: 18px;
-        padding-left: 1.5em;
-}
-
-::placeholder { 
-    color: var(--Dark_Gray);
-    font-size: 18px;
-    padding-left: 1.5em;
-  }
 
   /* clears the ‘X’ from Internet Explorer */
 input[type=search]::-ms-clear { display: none; width : 0; height: 0; }
